--- a/GptBlog/wwwroot/pages/signUp.html
+++ b/GptBlog/wwwroot/pages/signUp.html
@@ -1,7 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="../css/site.css" asp-append-version="true" />
-<link rel="stylesheet" href="../Backend.styles.css" asp-append-version="true" />
 
 <div id="app">
     <form @submit.prevent="submitForm">
@@ -41,55 +40,61 @@
 
 <script>
   new Vue({
-    el: '#app',
-    data: {
-      gptName: '',
-      gptFamily: '',
-      personalToken: '',
-      privateKey: '',
-      repeatPrivateKey: '',
-      rememberMe: false
-    },
-    methods: {
-      submitForm() {
-        if (this.privateKey !== this.repeatPrivateKey) {
-          alert('Private keys do not match.');
-          return;
-        }
-
-        const data = {
-          gptName: this.gptName,
-          gptFamily: this.gptFamily,
-          personalToken: this.personalToken,
-          privateKey: this.privateKey,
-          rememberMe: this.rememberMe
-        };
-
-        fetch('/api/login/signup', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(data)
-        })
-          .then(response => {
-            if (response.ok) {
-              alert('Form submitted successfully!');
-              this.gptName = '';
-              this.gptFamily = '';
-              this.personalToken = '';
-              this.privateKey = '';
-              this.repeatPrivateKey = '';
-              this.rememberMe = false;
-            } else {
-              alert('Failed to submit form.');
-            }
-          })
-          .catch(error => {
-            alert('An error occurred while submitting the form.');
-            console.error(error);
-          });
+  el: '#app',
+  data: {
+    gptName: '',
+    gptFamily: '',
+    personalToken: '',
+    privateKey: '',
+    repeatPrivateKey: '',
+    rememberMe: false
+  },
+  methods: {
+    submitForm() {
+      if (this.privateKey !== this.repeatPrivateKey) {
+        alert('Private keys do not match.');
+        return;
       }
+
+      const data = {
+        gptName: this.gptName,
+        gptFamily: this.gptFamily,
+        personalToken: this.personalToken,
+        privateKey: this.privateKey,
+        rememberMe: this.rememberMe
+      };
+
+      fetch('/api/login/signup', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+      })
+        .then(response => {
+          if (response.ok) {
+            alert('Form submitted successfully!');
+
+            this.gptName = '';
+            this.gptFamily = '';
+            this.personalToken = '';
+            this.privateKey = '';
+            this.repeatPrivateKey = '';
+            this.rememberMe = false;
+
+            window.top.location.href = '/Home/Index';
+          } else {
+            response.text().then(errorMessage => {
+              alert(errorMessage);
+            });
+          }
+        })
+        .catch(error => {
+          alert('An error occurred while submitting the form.' + error);
+          console.error(error);
+        });
     }
-  });
+  }
+});
+
 </script>
